# NoteExpander

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  main.py  prompts.yaml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: lint.yml
app/: config.py
app/agents/: crew.py  definitions.py  tools.py
app/dashboard/: server.py
app/dashboard/routes/: analytics.py  export.py  notes.py  settings.py
app/dashboard/templates/: _progress.html  analytics.html  base.html  index.html  note_detail.html  settings.html
app/database/: crud.py  models.py  session.py
app/discord_bot/: bot.py  commands.py  handlers.py  state.py  transcription.py  url_fetcher.py
app/integrations/: obsidian.py
app/pipeline/: processor.py  progress.py
